fixed alignment issues of connected and disconnected infos

--- a/public/index.css
+++ b/public/index.css
@@ -92,7 +92,7 @@
     	width: auto;
     	clear:right;
         font-size: 3em;
-        max-width: 40vw;
+        max-width: 45vw;
         margin-right: 1vw;
         margin-left:55vw;
     }
@@ -102,7 +102,7 @@
     	background-color:#98fb98;
     	text-align: left;
     	width:auto;
-        max-width: 40vw;
+        max-width: 45vw;
     	float:left;
     	clear:left;
         font-size: 3em;
@@ -123,9 +123,9 @@
     	font-size: 17px;
     	font-style: italic;
         width: 100%;
-        text-align:center;
         margin-bottom: 5px;
         color:#424242;
+        clear: both;
     }
 
     #typing
